force-app/main/default/objects/TableauPortalAdmin_config__c/TableauPortalAdmin_config__c.object-meta.xml
<CustomObject>
    <label>Tableau Portal Admin</label>
    <nameField>
        <displayFormat>TAP-{00000}</displayFormat>
        <label>TableauPortalAdmin_config Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TableauPortalAdmin_configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>