force-app/main/default/objects/TableauPortalAdmin_config__c/fields/Carousal__c.field-meta.xml
<CustomField>
    <fullName>Carousal__c</fullName>
    <label>Carousal #</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>