force-app/main/default/objects/TableauPortalAdmin_config__c/fields/Carousal_Description__c.field-meta.xml
<CustomField>
    <fullName>Carousal_Description__c</fullName>
    <inlineHelpText>Put one line description of Carousal image.</inlineHelpText>
    <label>Carousal Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>