force-app/main/default/objects/TableauPortalAdmin_config__c/fields/Corousal_Header__c.field-meta.xml
<CustomField>
    <fullName>Corousal_Header__c</fullName>
    <inlineHelpText>One Line upto 100 characters header of Carousal image.</inlineHelpText>
    <label>Corousal Header</label>
    <length>100</length>
    <type>Text</type>
</CustomField>