force-app/main/default/objects/TableauPortalAdmin_config__c/fields/GSA_Team_Member_Name__c.field-meta.xml
<CustomField>
    <fullName>GSA_Team_Member_Name__c</fullName>
    <label>GSA Team Member Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>