force-app/main/default/objects/TableauPortalAdmin_config__c/fields/GSA_Team_Role__c.field-meta.xml
<CustomField>
    <fullName>GSA_Team_Role__c</fullName>
    <label>GSA Team Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>