force-app/main/default/objects/TableauPortalAdmin_config__c/fields/image_Name__c.field-meta.xml
<CustomField>
    <fullName>image_Name__c</fullName>
    <inlineHelpText>Please provide name of image uploaded in static resource for tableau portal with format i.e. png/jpg.</inlineHelpText>
    <label>image Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>