force-app/main/default/objects/TableauPortalAdmin_config__c/fields/Report_Name__c.field-meta.xml
<CustomField>
    <fullName>Report_Name__c</fullName>
    <label>Report Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>