force-app/main/default/objects/TableauPortalAdmin_config__c/fields/Report_Owner__c.field-meta.xml
<CustomField>
    <fullName>Report_Owner__c</fullName>
    <label>Report Owner</label>
    <length>100</length>
    <type>Text</type>
</CustomField>