force-app/main/default/objects/TableauPortalAdmin_config__c/fields/Report_URL__c.field-meta.xml
<CustomField>
    <fullName>Report_URL__c</fullName>
    <label>Report URL</label>
    <type>Url</type>
</CustomField>