force-app/main/default/objects/TableauPortalAdmin_config__c/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <inlineHelpText>This will determine the placement of contact in GSA Team page.</inlineHelpText>
    <label>Sort Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>