force-app/main/default/objects/TableauPortalAdmin_config__c/recordTypes/Carousal.recordType-meta.xml
<RecordType>
    <fullName>Carousal</fullName>
    <active>true</active>
    <description>Define Carousal image and Description</description>
    <label>Carousal</label>
</RecordType>