force-app/main/default/objects/TableauPortalAdmin_config__c/recordTypes/Dashboard_Detail.recordType-meta.xml
<RecordType>
    <fullName>Dashboard_Detail</fullName>
    <active>true</active>
    <label>Dashboard Detail</label>
</RecordType>