force-app/main/default/objects/TableauPortalAdmin_config__c/recordTypes/Faq.recordType-meta.xml
<RecordType>
    <fullName>Faq</fullName>
    <active>true</active>
    <label>Faq</label>
</RecordType>