force-app/main/default/objects/TableauPortalAdmin_config__c/recordTypes/GSA_Team_Member.recordType-meta.xml
<RecordType>
    <fullName>GSA_Team_Member</fullName>
    <active>true</active>
    <label>GSA Team Member</label>
</RecordType>